# xbot_navigoals

./: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  README.md  package.xml
include/navigoal_core/: navigoal_core.hpp
launch/: office_lady.launch
msg/: AudioStatus.msg  PoseAudioArray.msg  PoseWithAudio.msg  RobotStatus.msg  SignStatus.msg
scripts/: clear_costmap.py  clear_costmap.py.autosave  coll_position_dic.yaml  demo.py  face_recog.py  lady_circle_test.py  office_lady.py  office_slam.py  pose.yaml  register.py  sample.py  test.py  ubox_register.py  ubox_sample.py  xbot_app_bridge.py
src/: CMakeLists.txt  main.cpp  navigoal_core.cpp
