<package>
  <name>xbot_navigoals</name>
  <version>0.6.7</version>
  <description>
    Controlling navigation goals for xbot, including point and give goals.
  </description>
  <author email="yowlings@gmail.com">Rocwang</author>
  <maintainer email="yowlings@gmail.com">Rocwang</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yowlings/xbot_navigoals/issues</url>
  <url type="repository">https://github.com/yowlings/xbot_navigoals</url>
  <url type="website">http://robots.ros.org/xbot/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <!-- Ros -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Ecl -->
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_time</build_depend>

  <!--  Xbot-->
  <build_depend>xbot_msgs</build_depend>


  <!-- Ros -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- Ecl -->
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>ecl_time</run_depend>

  <run_depend>message_runtime</run_depend>


</package>
